[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["AprilNEA <github@sku.moe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cf = "scripts.cf:main"
